<resources>
    <string name="app_name">Vegetable Sale</string>
    <string name="Email">E-mail</string>
    <string name="Senha">Senha</string>
    <string name="Entrar">Login</string>
    <string name="Nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="title_activity_login">Autenticação</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Registrar-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_incorrect_password">Senha inválida</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
